crates/gr-core/src/snapshots/gr_core__tests__capability-category-motion-sensor.snap
---
source: crates/gr-core/src/lib.rs
expression: "serde_yaml::to_string(&category).expect(\"yaml\")"
---
motion-sensor
