crates/gr-core/src/snapshots/gr_core__tests__capability-category.snap
---
source: crates/gr-core/src/lib.rs
expression: "serde_yaml::to_string(&CapabilityCategory::MotionSensor).expect(\"yaml\")"
---
motion-sensor
