crates/gr-core/src/snapshots/gr_core__tests__dualsense-neutral-payload.snap
---
source: crates/gr-core/src/lib.rs
expression: "serde_yaml::to_string(&ProfileInputPayload::DualSense(DualSenseInput::neutral())).expect(\"yaml\")"
---
profile: dualsense
fields:
  buttons:
    face:
      cross: false
      circle: false
      square: false
      triangle: false
    shoulders:
      l1: false
      r1: false
    stick_clicks:
      l3: false
      r3: false
    system:
      create: false
      options: false
      ps: false
      touchpad_click: false
  dpad:
    up: false
    down: false
    left: false
    right: false
  sticks:
    left_x: 0
    left_y: 0
    right_x: 0
    right_y: 0
  triggers:
    l2: 0
    r2: 0
  touchpad:
    contact_1:
      active: false
      x: 0
      y: 0
    contact_2:
      active: false
      x: 0
      y: 0
  motion:
    gyroscope:
      x: 0
      y: 0
      z: 0
    accelerometer:
      x: 0
      y: 0
      z: 0
