crates/gr-core/src/snapshots/gr_core__tests__fidelity-tier-compatibility.snap
---
source: crates/gr-core/src/lib.rs
expression: "serde_yaml::to_string(&tier).expect(\"yaml\")"
---
compatibility
